--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
 
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="./style/bs.css">
+    <link rel="stylesheet" href="style/bs.css">
+    <link rel="stylesheet" href="style/custom.css">
 </head>
     <body class="container">
     <header>
@@ -19,11 +20,11 @@
                 <form data-coffee-order="form">
                     <div class="form-group">
                         <label for="coffeeOrder">Coffee Order</label>
-                        <input id="coffeeOrder" class="form-control" name="coffee" autofocus>
+                        <input id="coffeeOrder" class="form-control" name="coffee" autofocus required pattern="[a-zA-Z\s]+">
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email</label>
-                        <input id="emailInput" class="form-control" type="email" name="emailAddress" value="" placeholder="dr@who.com">
+                        <input id="emailInput" class="form-control" type="email" name="emailAddress" value="" placeholder="dr@who.com"  required>
                     </div>
                     <div class="radio">
                         <label>
@@ -61,14 +62,22 @@
                 </form>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4>Pending Orders:</h4>
+                <div data-coffee-order="checklist"></div>
+            </div>
+        </div>
     </section>
 
-    <script src="scripts/jquery.js" charset="utf-8"></script>
+    <script src="scripts/vendor/jquery.js" charset="utf-8"></script>
+    <script src="scripts/checklist.js" charset="utf-8"></script>
+    <script src="scripts/validations.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/rangehandler.js" charset="utf-8"></script>
     <script src="scripts/datastore.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
 
-</body>
+    </body>
 </html>
